--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <div>
                     <img 
                     src="https://github.com/gabrielfeola.png" 
-                    alt="Lindão aqui">
+                    alt="Gabriel Feola">
                 </div>
             </header>
         
@@ -51,6 +51,13 @@
                             target="_blank"
                             href="https://www.twitch.tv/directory/game/Minecraft">
                                 <img src="https://static-cdn.jtvnw.net/ttv-boxart/27471_IGDB-188x250.jpg" alt="Minecraft">
+                            </a>
+                        </li>
+                        <li>
+                            <a 
+                            target="_blank"
+                            href="https://www.twitch.tv/directory/game/FIFA%2023">
+                                <img src="https://static-cdn.jtvnw.net/ttv-boxart/1745202732_IGDB-188x25.jpg" alt="FIFA 23">
                             </a>
                         </li>
                     </ul>
